stateDiagram-v2
    [*] --> idle
    idle --> collecting_candidates
    collecting_candidates --> open
    open --> locked
    locked --> draining
    draining --> closing
    closing --> closed
    closed --> completed
    completed --> [*]

    open --> aborted
    locked --> aborted
    draining --> aborted
    aborted --> [*]

    state open {
        [*] --> accepting_candidates
    }

    state draining {
        [*] --> waiting_list_draining
        waiting_list_draining --> reference_precalculation
    }
